Unit test the application of time-series metrics to ensemble forecasts, #387.